# Trade

./: .gitignore  KST  KST.pine  RSICI.pine  RSIMA  SMC.pine  Scanner.pine  Sqz_adx_smiergo_summary_emas.pine  Strategy.pine  choppiness.pine  fbb.pine  scaneernew.pine
analysis/: deploy_remote.sh  project_sanity_check.sh  push_src_git.sh  pyproject.toml  pyrightconfig.json  ruff_cmd_check.sh  search_replace.sh  stop_remote_process.sh
analysis/apps/nse_vol_tracker/: cache_manager.py  data_processor.py  indicators.py  sector_loader.py  vol_app.py  vol_app.toml  vol_scanner.py
analysis/apps/trade_client/: trade_app.py  trade_app.toml
analysis/apps/tradeview/: tv_scanner.py  tv_scanner_config.toml  tv_update.py  tv_update_config.toml
analysis/data_helper_scripts/: Dockerfile_gdrive_cloudrun_rclone  dockerignore  nse_gcloud_downloader_gcloud_client.py  nse_gcloud_downloader_rclone.py  nse_gcs_downloader_gcloud_func.py  requirements_gcloud_func.txt
analysis/helper_scripts/: category_analysis.txt  compare_pkl.py  convert_to_new_cols.py  convert_wl.py  create_sectoral_index_files.py  download_stocks_traded.py  generate_candidates.py  generate_charts.py  generate_ewma.py  generate_top_percentile.py  merge_top_list.py  merge_wl.py  sma_ema_analysis.py
analysis/nse_data/: nse_data_01012026.csv  nse_data_02012026.csv  nse_data_02122025.csv  nse_data_03122025.csv  nse_data_04122025.csv  nse_data_05122025.csv  nse_data_06012026.csv  nse_data_08012026.csv  nse_data_08122025.csv  nse_data_09122025.csv  nse_data_10122025.csv  nse_data_11122025.csv  nse_data_12012026.csv  nse_data_13012026.csv  nse_data_14012026.csv  nse_data_18122025.csv  nse_data_19012026.csv  nse_data_21012026.csv  nse_data_22012026.csv  nse_data_23012026.csv  nse_data_24122025.csv  nse_data_26122025.csv  nse_data_29122025.csv  nse_data_30122025.csv
analysis/nse_data/daily/: nse_data_01022026.csv  nse_data_01122025.csv  nse_data_02022026.csv  nse_data_03022026.csv  nse_data_04022026.csv  nse_data_05012026.csv  nse_data_05022026.csv  nse_data_12122025.csv  nse_data_16012026.csv  nse_data_16122025.csv  nse_data_17122025.csv  nse_data_19122025.csv  nse_data_20012026.csv  nse_data_22122025.csv  nse_data_23012026.csv  nse_data_23122025.csv  nse_data_27012026.csv  nse_data_28012026.csv  nse_data_29012026.csv  nse_data_30012026.csv  nse_data_31122025.csv
analysis/nse_data/index/: categories.csv  nifty100_enhanced_esg.csv  nifty100_esg.csv  nifty100_esg_sector_leaders.csv  nifty100_liquid_15.csv  nifty500_healthcare.csv  nifty500_multicap_india_manufacturing_503020.csv  nifty500_multicap_infrastructure_503020.csv  nifty500_shariah.csv  nifty50_shariah.csv  nifty_50.csv  nifty_auto.csv  nifty_bank.csv  nifty_capital_markets.csv  nifty_cement.csv  nifty_chemicals.csv  nifty_commodities.csv  nifty_conglomerate_50.csv  nifty_consumer_durables.csv  nifty_core_housing.csv  nifty_cpse.csv  nifty_energy.csv  nifty_ev_new_age_automotive.csv  nifty_financial_services.csv  nifty_financial_services_25_50.csv  nifty_financial_services_ex_bank.csv  nifty_fmcg.csv  nifty_healthcare.csv  nifty_housing.csv  nifty_india_consumption.csv  nifty_india_defence.csv  nifty_india_digital.csv  nifty_india_infrastructure_logistics.csv  nifty_india_internet.csv  nifty_india_manufacturing.csv  nifty_india_new_age_consumption.csv  nifty_india_railways_psu.csv  nifty_india_select_5_corporate_groups_maatr.csv  nifty_india_tourism.csv  nifty_infrastructure.csv  (+29 more)
analysis/orchest/: config.toml  orchest_config.toml  start_orchest.py  start_orchest1.py
analysis/scripts/: dedup.py  gen_category.py  generate_top_percentile.py  nse_daily_data_downloader.py  nse_daily_download.sh
analysis/scripts/helper_scripts/: calculate_avg_percentile.py  convert_consolidated_wl.py  dedup.py  intersect.py  volume_analysis.py
analysis/scripts/web_script/: app.py
analysis/tradeapi/: access_token  access_token.enc  access_token.toml  clear_superorders.py  dhan_trade.py  dhan_trade.toml  price_config.toml  price_strike_calc.py  scrip_master.py  scrip_master.toml  scrip_master_1.py  scrip_master_orig.py  scrip_search.py  scrip_search.toml  scrip_search_1.py  ssh-key-2026-04-29.key.pub  start_ssh_proxy.sh  symbols_config.toml  symbols_config.yaml
analysis/tradeview/: tv_scanner.py  tv_scanner_config.toml  tv_update.py  tv_update_config.toml
analysis/utils/: app_config.toml  fastapi_base.py  utility.py
analysis/utils/config/: app_config.toml  config_loader.py
analysis/utils/data/: create_sectoral_index_files.py  gen_category.py  gen_nse_holidays_list.py  nse_daily_data_downloader.py  nse_daily_download.sh  nse_daily_downloader_config.toml  nse_gcloud_downloader.py  nse_holidays_list.py  paths.py  paths_config.toml  sync_data.py  sync_data.toml  sync_data_cron.sh
analysis/utils/fastapi/: fastapi_base.py
analysis/utils/logging/: log_utils.py
analysis/utils/network/: proxy_config.toml  start_proxy.py
analysis/utils/ocr/: ocr_engine.py
analysis/utils/time/: time_utils.py
analysis/web_scripts/data_scripts/: create_sectoral_index_files.py  gen_category.py  nse_daily_data_downloader.py  nse_daily_download.sh  sync_data.py  sync_data_cron.sh
analysis/web_scripts/nse_vol_tracker/: app.py  app_config.toml  cache_manager.py  data_processor.py  sector_loader.py  tv_update.py  vol_app.py  vol_scanner.py
analysis/web_scripts/nse_vol_tracker_dict_monolith/: app.py
analysis/web_scripts/nse_vol_tracker_numpy/: analysis.docx  app.py  cache_manager.py  data_processor.py
(+718 files in other folders)
