[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trade_analysis"
version = "1.0"
description = "Trading Analysis"
readme = "README.md"
requires-python = ">=3.10"

# List your project's dependencies here
dependencies = [
    "pandas",
    "numpy",
    "requests",
    "pillow",
]

[tool.setuptools.packages.find]
# Tells setuptools to look in the current root directory for your packages (like 'utils', 'tradeapi')
where = ["."]


[tool.ruff]
# Standard PEP 8 line length
line-length = 88

[tool.ruff.lint]
# --select=ALL
select = ["ALL"]

# Combines your --ignore and --extend-ignore flags globally for all files
ignore = [
    "D",        # pydocstyle (missing docstrings)
    "ANN204",   # Missing return type annotation for special method `__init__`
    "INP001",   # Missing __init__.py in implicit namespace package
    "PLR0913",  # Too many arguments to function call (>5)
    "ANN401",   # Dynamically typed expressions (typing.Any) are disallowed
    "PERF203",
    "COM812",
    "ERA001",
    "S603",
    "S607",
    "C901",
    "PLR0912",
    "PLR0915",
]


[tool.djlint]
ignore = "H025"