[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trade_analysis"
version = "1.0"
description = "Trading Analysis"
readme = "README.md"
requires-python = ">=3.10"

# List your project's dependencies here
dependencies = [
    "pandas",
    "numpy",
    #"pillow",
    "requests",
    "cryptography",  # For secure token encryption (dhan_trade.py)
    "psutil",        # For orchestrator performance stats (start_orchest.py)
    "pytz",          # For India timezone handling (utility.py / scrip_master.py)
    "uvicorn",    # <-- Added for your web server
    "fastapi",    # <-- (Add this too if your app uses FastAPI)
    "jinja2",
    "python-multipart",
]

[tool.setuptools.packages.find]
# Tells setuptools to look in the current root directory for your packages (like 'utils', 'tradeapi')
where = ["."]

[tool.setuptools.package-data]
"*" = ["*.toml", "*.html", "*.css", "*.js", "*.csv"]

[tool.ruff]
# Standard PEP 8 line length
line-length = 88

[tool.ruff.lint]
# --select=ALL
select = ["ALL"]

# Combines your --ignore and --extend-ignore flags globally for all files
ignore = [
    "D",        # pydocstyle (missing docstrings)
    "ANN204",   # Missing return type annotation for special method `__init__`
    "INP001",   # Missing __init__.py in implicit namespace package
    "PLR0913",  # Too many arguments to function call (>5)
    "ANN401",   # Dynamically typed expressions (typing.Any) are disallowed
    "PERF203",
    "COM812",
    "ERA001",
    "S603",
    "S607",
    "C901",
    "PLR0912",
    "PLR0915",
    "FBT001",
    "FBT002",
    "PLR2004",
]


[tool.djlint]

# Ignore specific linter rules (e.g., H025)
ignore = "H025,H030,H031"

# Exclude directories from being scanned to speed up the process
exclude = ".git,.tox,venv,.venv,env,node_modules,build,dist"


[tool.mypy]
# 1. Set the current directory as the primary search path for your modules
mypy_path = "."

# 2. Tell Mypy to find the package root structures dynamically 
explicit_package_bases = true

# 3. Allow directory scanning to work seamlessly even if some subfolders lack an __init__.py
namespace_packages = true

disable_error_code = [ "var-annotated","operator","assignment","arg-type"]

# --- UPDATE 2: Add overrides for the specific libraries lacking stubs ---
[[tool.mypy.overrides]]
module = [
    "tesserocr",
    "google.cloud.*",  # The .* ensures all submodules are covered
    "AppKit",
    "Quartz"
]
ignore_missing_imports = true